0.02_01  2004-01-08
- POD fixes

0.02     2004-01-08
- simplify (and fix) new_cached() algorithm
- revised docs

0.01_05  2004-01-07
- datetime() accepts time_zone and locale parameters
- new accepts a duration parameter

0.01_04  2004-01-07
- random generator is overridable
- no more overflow in "set" routines for very small densities
- more tests

0.01_03  2004-01-06
- random_duration has 'duration' parameters
- more examples

0.01_02  2004-01-06
- random_duration, random_datetime
- more examples

0.01_01  2004-01-05
- more docs
- added new_cached()

0.01     2004-01-05
- created from DT::Event::Recurrence
