@@ -1,12 +1,10 @@
 TODO list for Perl module DateTime::Event::Random
 
-Organize the TODO list :)
+implement span() ?
+
+Actually _test_ the distribution for randomness.
 
 Maybe implement truncate_to => 'days'
-
-How to obtain shuffled datetimes?
-
-How to obtain exactly an event per week?
 
 Find out some links about the "density function"
 
@@ -18,11 +16,22 @@ Optimize new_cached()
 Optimize duration()
 
 $set->next($dt) on an unbounded, uncached set should use a different
-density value (0.5 density)
+density value (0.5 density). Now, this only happens for the
+_first_ call to next($dt).
 
-Documented problems - from the POD:
+Documented problems - from the POD & README:
 
-Note that, although the datetime values are random,
-the accessors (C<as_list>, C<iterator/next/previous>) always 
-return sorted datetimes.
+    Note that, although the datetime values are random,
+    the accessors (C<as_list>, C<iterator/next/previous>) always 
+    return sorted datetimes.
 
+    Tests may fail randomly, because they depend on 
+    averaging random results...
+
+For the Cookbook:
+
+    * How to obtain shuffled datetimes?
+
+    * How to obtain exactly an event per week?
+
+    * How to obtain a random Span?
